exercicio de listas

--- a/index.html
+++ b/index.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex-Box</title>
-    <style>
-     
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: yellow;
-            columns: 10px ;
-            flex-direction: column;
-            width: 150px;
-            height: 150px;
-
-        }
-        .item{
-            align-items: center;
-        }
-    </style>
+    <title>exercicio de listas</title>
 </head>
 <body>
-    <div class="container">
-        <p class="item">Teste de Flex-Box</p>
-        <a class="item" href="">####</a>
-        <footer class="item">Tente aqui</footer>
-    </div>
-        <div class="container">
-        <p class="item">Teste de Flex-Box</p>
-        <a class="item" href="">####</a>
-        <footer class="item">Tente ali</footer>
-    </div>
-        <div class="container">
-        <p class="item">Teste de Flex-Box</p>
-        <a href="" class="item">####</a>
-        <footer class="item">olhe aqui</footer>
-    </div>
+    <h1>Tecnologias Web!</h1>
+
+    <dl>
+        <dt>HTML</dt>
+        <dd>Hyper Text Marckup Language</dd>
+
+        <dt>CSS</dt>
+        <dd>Cascating Style Sheets</dd>
+
+        <dt>JS</dt>
+        <dd>JavaScript</dd>
+    </dl>
+    
 </body>
 </html>
