exercicios de Gradiente e Transition

--- a/media.html
+++ b/media.html
@@ -29,6 +29,7 @@
             animation-name: imagens;
             animation-duration: 6s;
             animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
         }
     </style>
 </head>
